Make Dependency immutable and optimize deserialization logic for memory consumption and speed